<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Ceasa</string>
    <string name="email">E-mail</string>
    <string name="total_recebido">Total recebido</string>
    <string name="senha">Senha</string>
    <string name="esqueci">Esqueci minha senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="carregando">Carregando...</string>
    <string name="title_activity_cliente">Clientes</string>
    <string name="title_activity_cadastrar_cliente">Adicionar cliente</string>
    <string name="novo_produto">Novo produto</string>
    <string name="novo_cliente">Novo cliente</string>
    <string name="novo_usuario">Novo usuário/administrador</string>
    <string name="clientes">Clientes</string>
    <string name="usuarios">Usuários</string>
    <string name="produtos">Produtos</string>
    <string name="estoque">Estoque</string>
    <string name="vendas">Vendas</string>
    <string name="nome">Nome</string>
    <string name="data_hora">data - hora</string>
    <string name="cpf">CPF</string>
    <string name="cnpj">CNPJ</string>
    <string name="excluir_cliente">Excluir cliente</string>
    <string name="telefone">Telefone</string>
    <string name="cep">CEP</string>
    <string name="endereco">Endereço</string>
    <string name="bairro">Bairro</string>
    <string name="numero">Numero</string>
    <string name="complemento">Complemento</string>
    <string name="cidade">Cidade</string>
    <string name="adicionar_outro">+ ADICIONAR OUTRO</string>
    <string name="pessoa_fisica">Pessoa física</string>
    <string name="pessoa_juridica">Pessoa jurídica</string>
    <string name="consolidacao">Consolidação</string>
    <string name="individual">Individual</string>
    <string name="venda">Vendas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_excluir">excluir</string>
    <string name="data_inicio">Data início</string>
    <string name="data_fim">Data fim</string>

    <array name="uf">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>

    </array>

</resources>
