<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">
        <LinearLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:paddingTop="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="35sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="A"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:background="@drawable/circle"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/nome"
                        android:layout_marginTop="5sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/nome"/>
                    <EditText
                        android:id="@+id/cnpj"
                        android:layout_marginTop="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/cnpj"/>

                    <LinearLayout
                        android:id="@+id/telefones"
                        android:layout_marginTop="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <EditText
                            android:id="@+id/tel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:phoneNumber="true"
                            android:hint="@string/telefone"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/addTel"
                        android:padding="5sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/adicionar_outro"
                        android:textColor="@color/orange"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:id="@+id/emails"
                        android:layout_marginTop="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <EditText
                            android:id="@+id/mail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/addEmail"
                        android:padding="5sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/adicionar_outro"
                        android:textColor="@color/orange"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:paddingRight="20sp"
            android:paddingBottom="35sp">
            <EditText
                android:id="@+id/cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cep"
                android:inputType="number"/>
            <EditText
                android:id="@+id/end"
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco"
                android:inputType="text"/>
            <EditText
                android:id="@+id/bairro"
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/bairro"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <EditText
                    android:id="@+id/numero"
                    android:layout_marginTop="15sp"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:inputType="number"
                    android:hint="@string/numero"/>
                <EditText
                    android:id="@+id/comp"
                    android:layout_marginLeft="26sp"
                    android:layout_marginTop="15sp"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:inputType="text"
                    android:hint="@string/complemento"/>


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <Spinner
                    android:id="@+id/uf"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:entries="@array/uf">

                </Spinner>
                <Spinner
                    android:id="@+id/city"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7">

                </Spinner>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>