<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.paulo.ceasa.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.3">
                <ImageView
                    android:id="@+id/easter_egg"
                    android:layout_width="match_parent"
                    android:layout_height="310sp"
                    android:src="@drawable/logo_total"/>

            </LinearLayout>

            <LinearLayout

                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.6"
                android:weightSum="2"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/email"
                    android:layout_marginTop="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.3"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/senha"
                    android:layout_marginTop="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.3"
                    android:hint="@string/senha"
                    android:inputType="textPassword"/>
                <TextView
                    android:layout_marginTop="25sp"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.2"
                    android:text="@string/esqueci"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:onClick="onClickEsqueci"
                    android:textColor="@color/orange"/>

                <LinearLayout
                    android:layout_marginTop="25sp"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.4"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <Button
                        android:layout_width="0sp"
                        android:layout_marginRight="2sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@color/gray"
                        android:text="@string/cadastrar"
                        android:onClick="onClickCadastrar"/>

                    <Button
                        android:layout_width="0sp"
                        android:layout_marginLeft="2sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/entrar"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:background="@color/green_ceasa"
                        android:onClick="onClickEntrar"/>


                </LinearLayout>

            </LinearLayout>





        </LinearLayout>

    </ScrollView>

    <!-- esqueci minha senha-->
    <RelativeLayout
        android:id="@+id/relative_esqueci"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray_transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="vertical"
            android:padding="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:background="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.2"
                android:text="@string/esqueci"
                android:textSize="20sp"
                android:gravity="center"/>
            <EditText
                android:id="@+id/email_recover"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.4"
                android:hint="@string/email"/>

            <LinearLayout
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.4"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="right"
                    android:text="@string/cancelar"
                    android:textSize="20sp"
                    android:textColor="@color/orange"
                    android:onClick="onClickCancelarEsqueci"/>
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/enviar"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/orange"
                    android:onClick="onClickEnviar"/>

            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>

    <!--progress-->
    <RelativeLayout
        android:id="@+id/relative_progress"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray_transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:padding="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:background="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carregando"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>



        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
