<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark_transparent">

    <LinearLayout
        android:layout_marginTop="5sp"
        android:layout_marginRight="10sp"
        android:layout_marginLeft="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="15sp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2">
                <TextView
                    android:id="@+id/inicial"
                    android:layout_marginTop="4sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:background="@drawable/circle"
                    android:gravity="center|center_vertical" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/data_hora"/>
                <TextView
                    android:id="@+id/nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome"
                    android:textStyle="bold"
                    android:textSize="21sp"/>
                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/email"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_marginTop="15sp"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_error_light"
            android:padding="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:id="@+id/produto"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:textStyle="bold"
                android:textSize="21sp"
                android:text="@string/produtos"/>
            <TextView
                android:id="@+id/qtd"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:textSize="17sp"
                android:text="Qtd\n10"/>
            <TextView
                android:id="@+id/unitario"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textSize="17sp"
                android:text="Unitario R$\n10,00"/>
            <TextView
                android:id="@+id/total"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textSize="15sp"
                android:text="Total R$\n10,00"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>